<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ForgottenPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/in_app_logo"
            android:src="@drawable/inapp_logo" />

        <TextView
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/your_email_to_reset_password"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgotten_pass_email_idLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_button_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/user_reset_password_btn" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgotten_pass_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/registered_user_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>



</RelativeLayout>