<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/progress_view"
        android:visibility="gone"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logging_in_loading"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorAccent"/>

    </LinearLayout>
    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/in_app_logo_id"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/inapp_logo"
                android:contentDescription="@string/in_app_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                android:layout_below="@id/in_app_logo_id"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                app:errorEnabled="true"
                android:layout_below="@id/emailLayout"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgetten_pass_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/passwordLayout"
                android:text="@string/forgotten_password_on_login"
                android:textStyle="bold"
                android:layout_below="@id/passwordLayout"
                android:textColor="@color/colorAccent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:enabled="false"
                style="@style/AppButton.Greyed"
                android:layout_below="@id/forgetten_pass_id"
                android:text="@string/action_log_in_short"/>

            <TextView
                android:id="@+id/register_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_sign_up"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/email_sign_in_button"
                android:layout_marginTop="15dp"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>