<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/register_profile_image_id"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_camera_icon" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/register_profile_image_id"
                android:layout_alignEnd="@+id/register_profile_image_id"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/edit_pencil_image"
                android:src="@mipmap/ic_plus_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_profile_image_id"
                android:hint="@string/register_name"
                android:inputType="textCapWords"
                android:autofillHints=""
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_field_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_field_layout"
                android:hint="@string/register_username"
                android:inputType="textCapWords"
                android:autofillHints=""
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_field_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_field_layout"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_field_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                android:layout_below="@id/email_field_layout"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                app:counterMaxLength="16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_field_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reenter_password_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_field_layout"
                android:hint="@string/register_re_enter_password"
                android:inputType="textPassword"
                app:errorEnabled="true"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reenter_password_field_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signUp_button_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/reenter_password_field_layout"
                android:enabled="false"
                style="@style/AppButton.Greyed"
                android:text="@string/sign_up_btn"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>