<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".EditProfileActivity">

    <RelativeLayout
        android:id="@+id/relative_image_change_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_image_id"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/profile_image_placeholder" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/edit_profile_image_id"
            android:layout_alignEnd="@+id/edit_profile_image_id"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/ic_pencil_icon"
            android:contentDescription="@string/edit_pencil_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/edit_profile_image_id">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_image_btn_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/update_image"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_password_btn_id"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/reset_password_btn"
                />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
